--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,10 @@
-spring.application.name=springapirest-swagger
+logging.level.org.springframework=OFF
+logging.level.root=OFF
+spring.main.banner-mode=OFF
+# spring.application.name=springapirest-swagger
 # server.port=${PORT:0}
-server.port=8762
-eureka.instance.instance-id=${spring.application.name}:${random.value}
+# server.port=8762
+# eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 
 #eureka.client.securePortEnabled=true
@@ -12,16 +15,16 @@ eureka.instance.instance-id=${spring.application.name}:${random.value}
 #eureka.client.service-url.defaultZone=https://localhost:8761/eureka
 
 ##Local
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=editorialweb
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+# spring.datasource.url=jdbc:sqlserver://localhost;databaseName=editorialweb
+# spring.datasource.username=sa
+# spring.datasource.password=123
+# spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto = create-drop
 #spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.hibernate.ddl-auto = update
 #spring.application.name=spring-api-rest-heroku
