--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,11 @@
 	</properties>
 
 	<dependencies>
-	
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
