--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
 		<spring-cloud.version>Hoxton.SR12</spring-cloud.version>
 	</properties>
 
+	<!-- scope test esta habilitada para el contexto de testing solamente -->
 	<dependencies>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
 		<dependency>
             <groupId>org.projectlombok</groupId>
