--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
 spring.application.name=springapirest-swagger
 # server.port=${PORT:0}
 server.port=8762
-eureka.instance.instance-id=${spring.application.name}:${random.value}
+#eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 
 #eureka.client.securePortEnabled=true
 #eureka.client.ssl.key-store=client.p12
 #eureka.client.ssl.key-store-password=123456
 
-#Local Https
-#eureka.client.service-url.defaultZone=https://localhost:8761/eureka
-
-##Local
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=editorialweb
@@ -21,7 +16,7 @@ spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = update
 #spring.application.name=spring-api-rest-heroku
