--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
 	<!-- scope test esta habilitada para el contexto de testing solamente -->
 	<dependencies>
+		<!-- Model Mapper: http://modelmapper.org/ -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
