agregando cambios cache y logs

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
 
 	<!-- scope test esta habilitada para el contexto de testing solamente -->
 	<dependencies>
+		<!-- Cache -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<!-- Hibernate Cache -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+		</dependency>
+
 		<!-- Model Mapper: http://modelmapper.org/ -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
