--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,14 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 # spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.ddl-auto = update
 #spring.application.name=spring-api-rest-heroku
+
+#Cache https://docs.oracle.com/javaee/7/api/javax/persistence/SharedCacheMode.html
+spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+logging.level.org.hibernate.cache=debug
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
