agregando corrección controlador crear nuevo

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
 	<!-- scope test esta habilitada para el contexto de testing solamente -->
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Cache -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
