--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>3.6.28</version>
         </dependency>
+        <dependency>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc8</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
