agregando configuración mejorada

--- a/src/main/resources/application-oracle.properties
+++ b/src/main/resources/application-oracle.properties
@@ -1,10 +1,8 @@
-spring.application.name=springapirest-oracle
-# server.port=${PORT:0}
-server.port=8762
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=SYSTEM
 spring.datasource.password=123
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
