--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cavanosa</groupId>
-	<artifactId>virtual</artifactId>
+	<artifactId>springapirest-swagger</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
 	<name>springapirest-swagger</name>
 	<description>Spring api rest swagger</description>
@@ -22,7 +22,12 @@
 
 	<!-- scope test esta habilitada para el contexto de testing solamente -->
 	<dependencies>
-
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -215,6 +220,12 @@
 		    <groupId>com.oracle.database.jdbc</groupId>
 		    <artifactId>ojdbc8</artifactId>
 		    <scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+		<dependency>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId>
+		    <version>8.1.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
