--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=springapirest-swagger
 # server.port=${PORT:0}
 server.port=8762
 
-spring.profiles.active=postgres
+spring.profiles.active=dockerpostgres
 
