--- a/src/main/resources/application-dockerpostgres.properties
+++ b/src/main/resources/application-dockerpostgres.properties
@@ -8,8 +8,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+# spring.jpa.hibernate.ddl-auto = update
 
 
 
