--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=springapirest-swagger
 # server.port=${PORT:0}
+#server.port=8762
 server.port=8762
 
 spring.profiles.active=dockerpostgres
