--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=springapirest-swagger
 #server.port=8762
 server.port=8762
 
-spring.profiles.active=dockerpostgres
+spring.profiles.active=postgresamazon
 
